{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 6,
  "lineage": "825e8a76-45f3-dd65-569b-60d20d214b4c",
  "resources": [
    {
      "module": "module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    }
  ]
}